Fixed bug related to editor mode spacing between headings and tags that come immediately after

--- a/src/sass/variables/_root.scss
+++ b/src/sass/variables/_root.scss
@@ -101,7 +101,7 @@ body {
 	// --line-height-normal: 1.5;
 	// --line-height-tight: 1.3;
 	// --p-spacing: 1rem;
-	// --p-spacing-empty: 0rem;
+	--p-spacing-empty: 0.1rem;
 	// --heading-spacing: calc(var(--p-spacing) * 2.5);
 }
 
